# jules-mvp

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CRITICAL_FINDINGS.md  IMPROVEMENTS_IMPLEMENTED.md  MICRO-ROADMAP.md  NEXT_STEPS.md  PROJECT_SETUP.md  README.md  SECURITY_AUDIT_SUMMARY.md  SINGLE_USER_MVP.md  STATUS.md  TOOLING_RESEARCH.md
jules-backend/: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  BUILD_SUMMARY.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  Makefile  QUICKSTART.md  README.md  TESTING_IMPLEMENTATION_GUIDE.md  TESTING_QUICK_REFERENCE.md  TESTING_STRATEGY.md  docker-compose.yml  init-db.sql  pyproject.toml  pytest.ini
jules-backend/.github/workflows/: test.yml
jules-backend/alembic/: env.py
jules-backend/alembic/versions/: 001_initial_schema.py
jules-backend/scripts/: check_health.sh  generate_keys.py  init_db.sh  run_migrations.sh  seed_test_data.py
jules-backend/src/: __init__.py  config.py  main.py
jules-backend/src/api/: webhooks.py
jules-backend/src/core/: __init__.py  database.py  logging.py  redis.py  security.py
jules-backend/src/models/: compliance.py  conversation.py  user.py
jules-backend/src/services/: compliance_service.py  conversation_service.py  crisis_service.py  llm_service.py  memory_service.py  sms_service.py  stripe_service.py  user_service.py  veriff_service.py
jules-backend/tests/: conftest.py  test_api_webhooks.py  test_compliance_service.py  test_conversation_service.py  test_crisis_service.py  test_llm_service.py  test_sms_service.py
jules-backend/tests/integration/: __init__.py  test_compliance_flows.py  (+1 more)
(+54 files in other folders)
